examples/healthchecks/sidecar.yaml
---
node:
  id: default
  cluster: test-service
static_resources:
  listeners:
  - name: listerner
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 7502
        protocol: TCP
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          http_filters:
          - name: envoy.health_check
            config:
              headers:
              - exact_match: /healthcheck
                name: ':path'
              pass_through_mode: 'true'
          - name: envoy.router
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - route:
                  cluster: application
                match:
                  prefix: "/"
  clusters:
  - name: application
    type: STATIC
    connect_timeout:
      seconds: '5'
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: application
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 7504
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 7503
